# SkfSdkEncrypt

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/tongxin/sdencrypt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tongxin/sdencrypt/: EncryptUtil.java  MainActivity.java  StorageBean.java  StorageUtils.java  SyncActivity.java
app/src/main/res/layout/: activity_main.xml  activity_sync.xml
app/src/main/res/values/: strings.xml
distribution/tongxin/include/: SDKey.h  SKF.h  base_type.h  skf_type.h
gradle/wrapper/: gradle-wrapper.properties
sdjni/: .gitignore  CMakeLists.txt  build.gradle
sdjni/src/main/: AndroidManifest.xml
sdjni/src/main/java/com/tongxin/sdjni/: SdEncrypt.java
sdjni/src/main/jni/: APDUs.c  APDUs.h  JNIEncrypt.c  aes.h  checksignature.c  checksignature.h  logger.h
